:pencil2: BKJang / Update Java Garbage Collection(GC).md